--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,14 @@
 {
   "name": "functions",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project is an Azure Functions app, that responds to GET, POST, PUT, and DELETE endpoints for products.",
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {},
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
